<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layoutupdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_margin_top"
        tools:context="com.mobilepos.abc.abilitypos.UpdateItemActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/code_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/code_edit"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/medium_text_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/name_edit"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:padding="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/medium_text_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/pprice_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/pprices"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:padding="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/medium_text_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/sprice_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/sprices"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:padding="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/medium_text_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/unit_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/iunit"
                android:inputType="text"
                android:maxLength="40"
                android:padding="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/medium_text_title" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/edit_item"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/update"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>
